tests/should-fail/pjass-tests/comments-only-end-in-lf.j
function test takes boolean foo returns nothing
    // comment if (foo) then
    endif
endfunction
